--- a/index.html
+++ b/index.html
@@ -11,31 +11,14 @@
   <canvas id="matrix"></canvas>
   <canvas id="particles"></canvas>
   
-  <div class="cat-container">
-    <div class="cat-body">
-      <div class="cat-head">
-        <div class="cat-ear cat-ear-left"></div>
-        <div class="cat-ear cat-ear-right"></div>
-        <div class="cat-eye cat-eye-left"></div>
-        <div class="cat-eye cat-eye-right"></div>
-        <div class="cat-nose"></div>
-        <div class="cat-whisker cat-whisker-left"></div>
-        <div class="cat-whisker cat-whisker-right"></div>
-      </div>
-      <div class="cat-torso"></div>
-      <div class="cat-tail"></div>
-      <div class="cat-leg cat-leg-front-left"></div>
-      <div class="cat-leg cat-leg-front-right"></div>
-      <div class="cat-leg cat-leg-back-left"></div>
-      <div class="cat-leg cat-leg-back-right"></div>
-    </div>
-  </div>
-  
   <div class="container">
-    <div class="glitch-wrapper">
-      <h1 class="glitch" data-text="Silas Hayri">Silas Hayri</h1>
+    <div class="profile">
+      <div class="avatar-frame">
+        <img src="avatar.png" alt="Silas Hayri portresi" class="avatar-img">
+      </div>
+      <h2 class="profile-name">Silas Hayri</h2>
     </div>
-    
+
     <div class="typing-container">
       <span class="typing-prefix">$ </span>
       <span id="typing-text" class="typing-text"></span>
